# simo3d

./: .coafile  .gitignore  CMakeLists.txt  README.md  clang-tidy-analyze.sh  coala.py  coala.sh
src/: CMakeLists.txt  ConsoleDlg.cc  ConsoleDlg.cpp  ConsoleDlg.h  ScriptLibrary.cc  ScriptLibrary.cpp  ScriptLibrary.h  data.cc  data.h  dialogs.fbp  emb.cpp  emb.h  functions.cc  functions.h  generated.cc  generated.cpp  generated.h  gui.cc  gui.h  gui.proto  idgenerator.cc  idgenerator.h  main.cc  main.cpp  mainframe.cc  mainframe.cpp  mainframe.h  mainframe.hpp  ptree.h  script.cc  script.h  scriptlib.cc  scriptlib.h  simo.proto  simopython.h  view.cc  view.cpp  view.h  view.hpp  wxgl.h
